<resources>

    <string name="app_name">Minesweeper</string>
    <string name="ok">OK</string>
    <string name="start_new_game">Start New Game</string>
    <string name="beginner">beginner</string>
    <string name="intermediate">intermediate</string>
    <string name="expert">expert</string>
    <string name="show_mine_probability">Mine Probability</string>
    <string name="is_linear_layout">is_linear_layout</string>
    <string name="is_game_canvas_layout">is_game_canvas_layout</string>
    <string name="two_decimal_places">%.2f</string>
    <string name="is_relative_layout">is_relative_layout</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="normalModeExplanation">This is normal minesweeper. The first square won\'t be a mine.</string>
    <string name="no_guessing_mode_explanation">It is possible to win the entire game with reasoning so no guessing is required. You may need to consider the total number of mines for your reasoning.</string>
    <string name="get_help_mode_explanation">This mode is minesweeper with a twist: there is a help button which randomly reveals 1 square (which isn\'t a mine). But if you tap the help button when there are un-flagged deducible mines or un-tapped deducible non-mines, then you lose.</string>

    <string name="normal_mode">Normal Mode</string>
    <string name="no_guessing_mode">No Guess Mode</string>
    <string name="no_guessing_mode_with_an_8">No Guessing Mode With An 8</string>
    <string name="get_help_mode_text">Get Help Mode</string>
    <string name="no_guess_board_not_found">Could not find a no guess board. This board might have guesses.</string>
    <string name="loading_text">Please wait! This may take a moment.</string>
    <string name="deducible_squares">Deducible Squares</string>
    <string name="go_to_settings_page">go to settings page</string>
    <string name="action_settings">settings</string>
    <string name="settings">Settings</string>
    <string name="make_toggling_flags_the_default">Make toggling flags the default</string>
    <string name="generate_games_with_an_8">Generate games with an 8</string>

    <!--
    TODO: these modes
    <item>Always Guess Wrong Mode</item>
    <item>Always Guess Correctly Mode</item>
    <item>Puzzle</item>
    -->
</resources>
